--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sendgrid/mail": "^7.6.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "express-handlebars": "^6.0.2"
+    "express-handlebars": "^6.0.2",
+    "mongoose": "^6.2.8"
   }
 }
